force-app/main/default/objects/netsuite_conn__Account_Sync_Settings__c/fields/netsuite_conn__Disable_Trigger__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Disable_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Trigger</label>
    <type>Checkbox</type>
</CustomField>