force-app/main/default/objects/netsuite_conn__Account_Sync_Settings__c/fields/netsuite_conn__Parent_Sync__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Parent_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent Sync</label>
    <type>Checkbox</type>
</CustomField>