force-app/main/default/objects/netsuite_conn__Account_Sync_Settings__c/fields/netsuite_conn__Update__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Update__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Update</label>
    <type>Checkbox</type>
</CustomField>